--- a/index.html
+++ b/index.html
@@ -278,6 +278,42 @@
         <img id="modalImage" src="" class="max-w-full max-h-[90vh] rounded shadow-2xl animate-scale-in">
     </div>
 
+    <!-- Student Details Modal -->
+    <div id="detailsModal"
+        class="fixed inset-0 z-[100] hidden bg-slate-900/60 backdrop-blur-md flex items-center justify-center p-4 transition-opacity duration-300 opacity-0 pointer-events-none">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-2xl transform scale-95 transition-all duration-300"
+            id="detailsModalContent" onclick="event.stopPropagation()">
+
+            <div class="p-6 border-b border-gray-100 flex justify-between items-center bg-indigo-50/30 rounded-t-2xl">
+                <div>
+                    <h3 class="text-xl font-bold text-gray-900" id="detailsSchoolName">Nome da Escola</h3>
+                    <p class="text-sm text-indigo-600 font-medium mt-1">
+                        <span id="detailsCount" class="bg-indigo-100 px-2 py-0.5 rounded-full">0</span> Aprovações
+                    </p>
+                </div>
+                <button onclick="closeDetailsModal()"
+                    class="text-gray-400 hover:text-gray-600 transition-colors p-2 hover:bg-gray-100 rounded-lg">
+                    <i class="ph ph-x text-xl"></i>
+                </button>
+            </div>
+
+            <div class="p-6">
+                <div class="relative">
+                    <div id="studentsList" class="student-list-container space-y-3">
+                        <!-- Student Cards -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-4 border-t border-gray-100 bg-gray-50 rounded-b-2xl flex justify-end">
+                <button onclick="closeDetailsModal()"
+                    class="px-4 py-2 bg-white border border-gray-200 text-gray-700 font-medium rounded-lg hover:bg-gray-50 transition-colors shadow-sm">
+                    Fechar
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script>
         // --- FULL CORRECTED DATASET (Based on prompt) ---
         const schools = [
