feat: Add 'Detalhes' column to the table header.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                                         class="ph ph-caret-up-down inline-block group-hover:text-indigo-600"></i>
                                 </th>
                                 <th class="px-6 py-4 text-center">Status</th>
+                                <th class="px-6 py-4 text-center">Detalhes</th>
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-100 bg-white" id="schoolsTableBody">
