--- a/index.html
+++ b/index.html
@@ -264,8 +264,14 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-800 text-gray-400 py-12">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <p class="text-sm mb-2">Desenvolvido para Diretoria de Ensino - Região Sertãozinho</p>
-            <p class="text-xs opacity-50">Dados sujeitos a conferência conforme atualização de 28/01/2026</p>
+            <p class="text-sm mb-2">Desenvolvido por: <span class="text-white font-medium">Davi Antonino Nunes da
+                    Silva</span></p>
+            <p class="text-sm mb-2">E-mail: <a href="mailto:professordavi85@gmail.com"
+                    class="hover:text-indigo-400 transition-colors">professordavi85@gmail.com</a></p>
+            <p class="text-sm mb-4">WhatsApp: <span class="hover:text-green-400 transition-colors">(16)
+                    99260-4315</span></p>
+            <p class="text-xs opacity-50 border-t border-gray-800 pt-4 mt-4">Desenvolvido para Diretoria de Ensino -
+                Região Sertãozinho • Dados sujeitos a conferência conforme atualização de 28/01/2026</p>
         </div>
     </footer>
 
