feat: add new conference registration entry

--- a/index.html
+++ b/index.html
@@ -828,6 +828,11 @@
                     "name": "Joao Lucas Sicchieri Nascimento",
                     "course": "1760693 - Manutenção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
                     "ies": "FATEC"
+                },
+                {
+                    "name": "Registro Adicional Conferência",
+                    "course": "Curso em Verificação",
+                    "ies": "N/A"
                 }
             ],
             "BASILIO RODRIGUES DA SILVA PROFESSOR": [
