fix: Correct school approval statistics and relocate student entries.

--- a/index.html
+++ b/index.html
@@ -436,11 +436,7 @@
                     "course": "2841163 - Gestão de Negócios e Inovação - Noite - Fatec Ribeirão Preto",
                     "ies": "FATEC"
                 },
-                {
-                    "name": "Fernanda Ribeiro Guima",
-                    "course": "0220702 - Agronegócio - Tarde - Fatec Taquaritinga - \"Marlene Maria Miletta Servidoni\"",
-                    "ies": "FATEC"
-                },
+
                 {
                     "name": "Julia Silva Ribeiro",
                     "course": "164 - Química - Bacharelado em Química Ambiental e Licenciatura em Química - integral - Instituto de Biociências, Letras e Ciências Exatas - São José do Rio Preto",
@@ -581,6 +577,11 @@
                 {
                     "name": "Jose Wilson Da Cruz",
                     "course": "1760693 - Manutenção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
+                    "ies": "FATEC"
+                },
+                {
+                    "name": "Fernanda Ribeiro Guima",
+                    "course": "0220702 - Agronegócio - Tarde - Fatec Taquaritinga - \"Marlene Maria Miletta Servidoni\"",
                     "ies": "FATEC"
                 }
             ],
@@ -989,6 +990,16 @@
                     "name": "Ariel Pereira De Souza",
                     "course": "1730873 - Gestão Ambiental - Noite - Fatec Jaboticabal - \"Nilo de Stéfani\"",
                     "ies": "FATEC"
+                },
+                {
+                    "name": "Gabriel De Abreu Lima",
+                    "course": "2840483 - Análise e Desenvolvimento de Sistemas - Noite - Fatec Ribeirão Preto",
+                    "ies": "FATEC"
+                },
+                {
+                    "name": "Giovanna Schiavinato Cardoso",
+                    "course": "1760773 - Gestão da Produção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
+                    "ies": "FATEC"
                 }
             ],
             "WINSTON CHURCHILL": [
@@ -1243,18 +1254,7 @@
                     "ies": "FATEC"
                 }
             ],
-            "NICIA FABIOLA ZANUTO GIRALDI PROFESSORA": [
-                {
-                    "name": "Gabriel De Abreu Lima",
-                    "course": "2840483 - Análise e Desenvolvimento de Sistemas - Noite - Fatec Ribeirão Preto",
-                    "ies": "FATEC"
-                },
-                {
-                    "name": "Giovanna Schiavinato Cardoso",
-                    "course": "1760773 - Gestão da Produção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
-                    "ies": "FATEC"
-                }
-            ],
+            "NICIA FABIOLA ZANUTO GIRALDI PROFESSORA": [],
             "MARIA ELYDE MONACO DOS SANTOS PROFESSORA": [
                 {
                     "name": "Marisa Yumi Shigueoka",
@@ -1304,10 +1304,10 @@
             { rank: 9, name: "MARIA FALCONI DE FELICIO", students: 27, approved: 3, rate: 11.11 },
             { rank: 10, name: "DOMINGOS PARO", students: 33, approved: 3, rate: 9.09 },
             { rank: 11, name: "MARIA ELYDE M. DOS SANTOS", students: 63, approved: 5, rate: 7.94 },
-            { rank: 12, name: "MAURICIO MONTECCHI", students: 123, approved: 6, rate: 4.88 },
+            { rank: 12, name: "MAURICIO MONTECCHI", students: 123, approved: 7, rate: 5.69 },
             { rank: 13, name: "ORMINDA GUIMARAES COTRIM", students: 126, approved: 6, rate: 4.76 },
             { rank: 14, name: "JOSE LUIZ DE SIQUEIRA", students: 175, approved: 8, rate: 4.57 },
-            { rank: 15, name: "BRUNO PIERONI", students: 188, approved: 8, rate: 4.26 },
+            { rank: 15, name: "BRUNO PIERONI", students: 188, approved: 10, rate: 5.32 },
             { rank: 16, name: "LUIZ MARCARI", students: 134, approved: 5, rate: 3.73 },
             { rank: 17, name: "NICIA FABIOLA ZANUTO GIRALDI", students: 57, approved: 2, rate: 3.51 },
             { rank: 18, name: "FERRUCIO CHIARATTI", students: 123, approved: 4, rate: 3.25 },
