chore: Update school approval data and student records, and add VS Code editor settings.

--- a/index.html
+++ b/index.html
@@ -451,6 +451,11 @@
                     "name": "Luiz Henrique Oliveira Vieira",
                     "course": "2840481 - Análise e Desenvolvimento de Sistemas - Manhã - Fatec Ribeirão Preto",
                     "ies": "FATEC"
+                },
+                {
+                    "name": "Fernanda Ribeiro Guima",
+                    "course": "0220702 - Agronegócio - Tarde - Fatec Taquaritinga - \"Marlene Maria Miletta Servidoni\"",
+                    "ies": "FATEC"
                 }
             ],
             "MARIO LINS DOUTOR": [
@@ -577,11 +582,6 @@
                 {
                     "name": "Jose Wilson Da Cruz",
                     "course": "1760693 - Manutenção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
-                    "ies": "FATEC"
-                },
-                {
-                    "name": "Fernanda Ribeiro Guima",
-                    "course": "0220702 - Agronegócio - Tarde - Fatec Taquaritinga - \"Marlene Maria Miletta Servidoni\"",
                     "ies": "FATEC"
                 }
             ],
@@ -972,7 +972,7 @@
                     "ies": "FATEC"
                 },
                 {
-                    "name": "Caroline Fernanda De Souza Rodrigues",
+                    "name": "Caroline De Souza Rodrigues",
                     "course": "2840891 - Gestão de Recursos Humanos - Manhã - Fatec Ribeirão Preto",
                     "ies": "FATEC"
                 },
@@ -989,16 +989,6 @@
                 {
                     "name": "Ariel Pereira De Souza",
                     "course": "1730873 - Gestão Ambiental - Noite - Fatec Jaboticabal - \"Nilo de Stéfani\"",
-                    "ies": "FATEC"
-                },
-                {
-                    "name": "Gabriel De Abreu Lima",
-                    "course": "2840483 - Análise e Desenvolvimento de Sistemas - Noite - Fatec Ribeirão Preto",
-                    "ies": "FATEC"
-                },
-                {
-                    "name": "Giovanna Schiavinato Cardoso",
-                    "course": "1760773 - Gestão da Produção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
                     "ies": "FATEC"
                 }
             ],
@@ -1254,7 +1244,18 @@
                     "ies": "FATEC"
                 }
             ],
-            "NICIA FABIOLA ZANUTO GIRALDI PROFESSORA": [],
+            "NICIA FABIOLA ZANUTO GIRALDI PROFESSORA": [
+                {
+                    "name": "Gabriel De Abreu Lima",
+                    "course": "2840483 - Análise e Desenvolvimento de Sistemas - Noite - Fatec Ribeirão Preto",
+                    "ies": "FATEC"
+                },
+                {
+                    "name": "Giovanna Schiavinato Cardoso",
+                    "course": "1760773 - Gestão da Produção Industrial - Noite - Fatec Sertãozinho - \"Deputado Waldyr Alceu Trigo\"",
+                    "ies": "FATEC"
+                }
+            ],
             "MARIA ELYDE MONACO DOS SANTOS PROFESSORA": [
                 {
                     "name": "Marisa Yumi Shigueoka",
@@ -1304,16 +1305,16 @@
             { rank: 9, name: "MARIA FALCONI DE FELICIO", students: 27, approved: 3, rate: 11.11 },
             { rank: 10, name: "DOMINGOS PARO", students: 33, approved: 3, rate: 9.09 },
             { rank: 11, name: "MARIA ELYDE M. DOS SANTOS", students: 63, approved: 5, rate: 7.94 },
-            { rank: 12, name: "MAURICIO MONTECCHI", students: 123, approved: 7, rate: 5.69 },
+            { rank: 12, name: "MAURICIO MONTECCHI", students: 123, approved: 6, rate: 4.88 },
             { rank: 13, name: "ORMINDA GUIMARAES COTRIM", students: 126, approved: 6, rate: 4.76 },
             { rank: 14, name: "JOSE LUIZ DE SIQUEIRA", students: 175, approved: 8, rate: 4.57 },
-            { rank: 15, name: "BRUNO PIERONI", students: 188, approved: 10, rate: 5.32 },
+            { rank: 15, name: "BRUNO PIERONI", students: 188, approved: 8, rate: 4.26 },
             { rank: 16, name: "LUIZ MARCARI", students: 134, approved: 5, rate: 3.73 },
             { rank: 17, name: "NICIA FABIOLA ZANUTO GIRALDI", students: 57, approved: 2, rate: 3.51 },
             { rank: 18, name: "FERRUCIO CHIARATTI", students: 123, approved: 4, rate: 3.25 },
             { rank: 19, name: "EDITH SILVEIRA DALMASO", students: 156, approved: 5, rate: 3.21 },
             { rank: 20, name: "ISAIAS JOSE FERREIRA", students: 65, approved: 2, rate: 3.08 },
-            { rank: 21, name: "ANNA PASSAMONTI BALARDIN", students: 201, approved: 5, rate: 2.49 },
+            { rank: 21, name: "ANNA PASSAMONTI BALARDIN", students: 201, approved: 6, rate: 2.99 },
             { rank: 22, name: "MARIO LINS", students: 35, approved: 1, rate: 2.86 },
             { rank: 23, name: "PLINIO BERARDO", students: 227, approved: 4, rate: 1.76 },
             { rank: 24, name: "ODULFO DE OLIVEIRA GUIMARAES", students: 91, approved: 1, rate: 1.10 },
